Uploaded image for project: 'Xerces-C++'
  1. Xerces-C++
  2. XERCESC-1703

Bad error description reported by xerces

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 3.1.0
    • 3.1.0
    • None
    • all platforms

    Description

      xml:
      <date/>

      xsd:
      <xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema">
      <xsd:element name="date" type="xsd:dateTime"/>
      </xsd:schema>

      Observed: error "Datatype error: Type:SchemaDateTimeException, Message:buffer not initialized
      yet!."

      Expected error message: something like " '' is not a valid value for the type

      {http://www.w3.org/2001/XMLSchema}

      dateTime"

      An exception is thrown at XMLDateTime.hpp[411] from XMLDateTime::assertBuffer() invoked by XMLDateTime::initParser().

      Attachments

        Activity

          People

            bsk Boris Kolpackov
            antonn Anton Nikolaevsky
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: