Provide a more descriptive error message for empty date-time type values (XERCESC-1703).

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@881733 13f79535-47bb-0310-9956-ffa450edef68